# dicta

./: .gitignore  CMakeLists.txt  README.md
include/audio/: AudioHandler.h  SoundIoException.h
include/preprocessor/: DFTHandler.h  Frame.hpp  MFCC.hpp  PreProcessor.h
src/: main.cpp
src/audio/: AudioHandler.cpp
src/preprocessor/: DFTHandler.cpp  PreProcessor.cpp
